--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "braintree-web": "2.21.0",
     "config": "1.19.0",
     "cookie-parser": "1.4.0",
+    "compression": "1.6.1",
     "expect.js": "0.3.1",
     "express": "4.13.3",
     "express-session": "1.13.0",
