--- a/package.json
+++ b/package.json
@@ -16,18 +16,6 @@
     "express-session": "1.13.0",
     "googleapis": "5.2.1",
     "grunt": "0.4.5",
-    "grunt-browserify": "4.0.1",
-    "grunt-concurrent": "2.2.1",
-    "grunt-contrib-clean": "0.7.0",
-    "grunt-contrib-copy": "0.8.2",
-    "grunt-contrib-imagemin": "1.0.0",
-    "grunt-contrib-jade": "0.15.0",
-    "grunt-contrib-rename": "0.0.3",
-    "grunt-contrib-sass": "0.9.2",
-    "grunt-contrib-uglify": "0.11.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-postcss": "0.7.1",
-    "grunt-shell": "1.1.2",
     "jade": "1.11.0",
     "moment": "2.12.0",
     "mongodb": "2.1.4",
@@ -37,33 +25,17 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "react": "0.14.7",
-    "react-ace": "3.0.0",
-    "react-addons-css-transition-group": "0.14.7",
-    "react-credit-card": "0.10.0",
-    "react-dom": "0.14.7",
-    "react-fastclick": "2.0.0",
-    "react-influx": "1.1.5",
-    "react-input-mask": "0.6.6",
-    "react-prefixr": "0.1.0",
-    "react-router": "1.0.3",
-    "react-tap-event-plugin": "0.2.1",
-    "react-textarea-autosize": "3.3.0",
     "sequelize": "3.19.1",
     "serve-favicon": "2.3.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
-    "superagent": "1.7.2",
-    "supertest": "1.1.0",
-    "underscore": "1.8.3",
-    "urijs": "1.17.1",
-    "url-parse": "1.0.5",
   },
   "scripts": {
     "test": "set -e; mocha --timeout 15000 --no-exit -R nyan",
     "tests": "set -e; for f in ./tests/*-test.compiled.js ; do npm run test $f; done",
     "start": "node index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
-    "compile": "grunt compile",
+    "compile": "grunt compile"
   },
   "repository": {
     "type": "git",
@@ -85,6 +57,6 @@
     "eslint-plugin-mocha": "1.1.0",
     "eslint-plugin-react": "3.16.1",
     "grunt-cli": "0.1.13",
-    "mocha": "2.3.4",
+    "mocha": "2.3.4"
   }
 }
