--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sequelize": "3.19.1",
     "serve-favicon": "2.3.0",
     "socket.io": "1.4.5",
-    "socket.io-client": "1.4.5",
+    "socket.io-client": "1.4.5"
   },
   "scripts": {
     "test": "set -e; mocha --timeout 15000 --no-exit -R nyan",
