--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .idea/
 *.compiled.js
+*.compiled.js.map
+# Dependency directory
+# https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
+node_modules
