--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.compiled.js",
   "dependencies": {
+    "babel-core": "6.5.2",
     "bluebird": "3.2.1",
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
@@ -17,6 +18,7 @@
     "googleapis": "5.2.1",
     "grunt": "0.4.5",
     "jade": "1.11.0",
+    "load-grunt-tasks": "3.4.0",
     "moment": "2.12.0",
     "mongodb": "2.1.4",
     "mongoose": "4.3.7",
