--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "1.13.0",
     "googleapis": "5.2.1",
     "grunt": "0.4.5",
+    "grunt-contrib-clean": "0.7.0",
+    "grunt-contrib-watch": "0.6.1",
     "jade": "1.11.0",
     "load-grunt-tasks": "3.4.0",
     "moment": "2.12.0",
