added basic info for commenting within package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "//": [
+    "How to add comments to package.json",
+    "http://stackoverflow.com/questions/14221579/how-do-i-add-comments-to-package-json-for-npm-install"
+  ],
   "name": "entree-server",
   "version": "0.0.0",
   "description": "",
