--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "main": "index.compiled.js",
   "dependencies": {
     "babel-core": "6.5.2",
+    "babel-plugin-array-includes": "2.0.3",
+    "babel-plugin-syntax-async-functions": "6.5.0",
+    "babel-plugin-syntax-class-properties": "6.5.0",
+    "babel-plugin-transform-async-to-module-method": "6.5.0",
+    "babel-plugin-transform-object-rest-spread": "6.5.0",
+    "babel-plugin-transform-runtime": "6.5.0",
     "bluebird": "3.2.1",
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
