--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "babel-plugin-transform-async-to-module-method": "6.5.0",
     "babel-plugin-transform-object-rest-spread": "6.5.0",
     "babel-plugin-transform-runtime": "6.5.0",
+    "babel-polyfill": "6.5.0",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-node5": "10.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
     "bluebird": "3.2.1",
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
