ported google apis over with working tests

--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "sequelize": "3.19.1",
     "serve-favicon": "2.3.0",
     "socket.io": "1.4.5",
-    "socket.io-client": "1.4.5"
+    "socket.io-client": "1.4.5",
+    "urijs": "1.17.1"
   },
   "scripts": {
-    "test": "set -e; mocha --timeout 15000 --no-exit -R nyan",
+    "test": "set -e; mocha --timeout 15000 --no-exit -R dot",
     "tests": "set -e; for f in ./tests/*-test.compiled.js ; do npm run test $f; done",
     "start": "node index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
