--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "serve-favicon": "2.3.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
-    "urijs": "1.17.1"
+    "urijs": "1.17.1",
+    "request": "2.72.0"
   },
   "scripts": {
     "test": "set -e; mocha --recursive --timeout 15000 --no-exit -R dot",
