--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "//": [
-    "How to add comments to package.json",
-    "http://stackoverflow.com/questions/14221579/how-do-i-add-comments-to-package-json-for-npm-install"
+    "Difference between dependencies and devDependencies",
+    "http://stackoverflow.com/questions/18875674/whats-the-difference-between-dependencies-devdependencies-and-peerdependencies"
   ],
   "name": "entree-server",
   "version": "0.0.0",
@@ -24,10 +24,10 @@
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
     "braintree-web": "2.21.0",
-    "config": "1.19.0",
-    "cookie-parser": "1.4.0",
     "compression": "1.6.1",
+    "config": "1.19.0",
     "convert-source-map": "1.1.3",
+    "cookie-parser": "1.4.0",
     "expect.js": "0.3.1",
     "express": "4.13.3",
     "express-session": "1.13.0",
@@ -37,6 +37,7 @@
     "grunt-contrib-watch": "0.6.1",
     "jade": "1.11.0",
     "load-grunt-tasks": "3.4.0",
+    "lodash": "4.13.1",
     "moment": "2.12.0",
     "mongodb": "2.1.4",
     "mongoose": "4.3.7",
@@ -45,12 +46,12 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "react": "0.14.7",
+    "request": "2.72.0",
     "sequelize": "3.19.1",
     "serve-favicon": "2.3.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
-    "urijs": "1.17.1",
-    "request": "2.72.0"
+    "urijs": "1.17.1"
   },
   "scripts": {
     "test": "set -e; mocha --recursive --timeout 15000 --no-exit -R dot",
@@ -69,10 +70,6 @@
     "url": "https://github.com/siddharthgutta/Entree.Server/issues"
   },
   "homepage": "https://github.com/siddharthgutta/Entree.Server#readme",
-  "//": [
-    "Difference between dependencies and devDependencies",
-    "http://stackoverflow.com/questions/18875674/whats-the-difference-between-dependencies-devdependencies-and-peerdependencies"
-  ],
   "devDependencies": {
     "babel-eslint": "4.1.8",
     "cordova": "6.0.0",
