Added deploy scripts

--- a/circle.yml
+++ b/circle.yml
@@ -5,3 +5,13 @@ machine:
 test:
   pre:
     - grunt compile
+
+deployment:
+  production:
+    branch: production
+    commands:
+      - ./scripts/deploy_prod.sh
+  staging:
+    branch: staging
+    commands:
+      - ./scripts/deploy_staging.sh
