--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,8 @@ deployment:
   production:
     branch: production
     commands:
-      - ./scripts/deploy_prod.sh
+      - ssh ubuntu@ec2-52-38-63-13.us-west-2.compute.amazonaws.com -i keys/entree.pem 'bash -s' < ./scripts/deploy_prod.sh
   staging:
     branch: staging
     commands:
-      - ./scripts/deploy_staging.sh
+      - ssh ubuntu@ec2-52-41-69-134.us-west-2.compute.amazonaws.com -i keys/entree.pem 'bash -s' < ./scripts/deploy_staging.sh
