--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,10 @@ deployment:
   production:
     branch: production
     commands:
+      - chmod 400 ./keys/entree.pem
       - ssh ubuntu@ec2-52-38-63-13.us-west-2.compute.amazonaws.com -i ./keys/entree.pem 'sh -s' < ./scripts/deploy_prod.sh
   staging:
     branch: staging
     commands:
+      - chmod 400 ./keys/entree.pem
       - ssh ubuntu@ec2-52-41-69-134.us-west-2.compute.amazonaws.com -i ./keys/entree.pem 'sh -s' < ./scripts/deploy_staging.sh
