--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,8 @@ deployment:
       - chmod 400 ./keys/entree.pem
       - ssh ubuntu@ec2-52-38-63-13.us-west-2.compute.amazonaws.com -i ./keys/entree.pem 'sh -s' < ./scripts/deploy_prod.sh
   staging:
-    branch: staging
+    branch: /^(?!master$).*/
     commands:
       - chmod 400 ./keys/entree.pem
-      - ssh ubuntu@ec2-52-41-69-134.us-west-2.compute.amazonaws.com -i ./keys/entree.pem 'sh -s' < ./scripts/deploy_staging.sh
+      - echo $CIRCLE_BRANCH
+      - ssh ubuntu@ec2-52-41-69-134.us-west-2.compute.amazonaws.com -i ./keys/entree.pem 'sh -s' < ./scripts/deploy_staging.sh $CIRCLE_BRANCH
