--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "urijs": "1.17.1"
   },
   "scripts": {
-    "test": "set -e; mocha --recursive --timeout 15000 --no-exit -R dot",
-    "tests": "set -e; for f in ./tests/*-test.compiled.js ; do npm run test $f; done",
+    "test": "set -e; mocha --timeout 15000 -R dot",
+    "tests": "set -e; for f in $(find ./test -name '*-test.compiled.js'); do npm run test $f; done",
     "start": "node index.compiled.js",
     "local": "NODE_ENV=local node index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
