--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-clean": "0.7.0",
     "grunt-contrib-watch": "0.6.1",
     "jade": "1.11.0",
+    "kerberos": "0.0.18",
     "keymirror": "0.1.1",
     "load-grunt-tasks": "3.4.0",
     "lodash": "4.13.1",
