--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "config": "1.19.0",
     "convert-source-map": "1.1.3",
     "cookie-parser": "1.4.0",
+    "eslint-plugin-babel": "3.1.0",
     "expect.js": "0.3.1",
     "express": "4.13.3",
     "express-session": "1.13.0",
