--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-node5": "10.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
+    "babel-runtime": "6.9.2",
     "bluebird": "3.2.1",
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
