trying server with local-staging

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "tests": "set -e; for f in $(find ./test -name '*-test.compiled.js'); do npm run test $f; done",
     "start": "node index.compiled.js",
     "local": "NODE_ENV=local node index.compiled.js",
+    "staging": "NODE_ENV=staging node index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
     "compile": "grunt compile"
   },
