added mongoose-auto-increment module

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "2.12.0",
     "mongodb": "2.1.4",
     "mongoose": "4.3.7",
+    "mongoose-auto-increment": "^5.0.1",
     "mysql": "2.10.0",
     "npm": "3.7.2",
     "passport": "0.3.2",
