--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ test:
 
 deployment:
   production:
-    branch: production
+    branch: master
     commands:
       - chmod 400 ./keys/entree.pem
       - ssh ubuntu@ec2-52-38-63-13.us-west-2.compute.amazonaws.com -i ./keys/entree.pem 'bash -s' < ./scripts/deploy_prod.sh
