--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "shortid": "2.2.6",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
+    "underscore": "^1.8.3",
     "urijs": "1.17.1"
   },
   "scripts": {
