--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "config": "1.19.0",
     "convert-source-map": "1.1.3",
     "cookie-parser": "1.4.0",
+    "deep-diff": "0.3.4",
     "eslint-plugin-babel": "3.1.0",
     "expect.js": "0.3.1",
     "express": "4.13.3",
