--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
     "braintree-web": "2.21.0",
+    "chance": "1.0.3",
     "compression": "1.6.1",
     "config": "1.19.0",
     "convert-source-map": "1.1.3",
