--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
     "braintree-web": "2.21.0",
-    "chance": "1.0.3",
     "compression": "1.6.1",
     "config": "1.19.0",
     "convert-source-map": "1.1.3",
@@ -54,6 +53,7 @@
     "request": "2.72.0",
     "sequelize": "3.19.1",
     "serve-favicon": "2.3.0",
+    "shortid": "2.2.6",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
     "urijs": "1.17.1"
