--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "start": "node index.compiled.js",
     "local": "NODE_ENV=local node index.compiled.js",
     "staging": "NODE_ENV=staging node index.compiled.js",
+    "watch": "NODE_ENV=local nodemon index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
     "compile": "grunt compile"
   },
