--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "",
   "main": "index.compiled.js",
   "dependencies": {
+    "@slack/client": "2.1.0",
     "babel-core": "6.5.2",
     "babel-plugin-array-includes": "2.0.3",
     "babel-plugin-syntax-async-functions": "6.5.0",
