--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-babel": "3.1.0",
     "expect.js": "0.3.1",
     "express": "4.13.3",
+    "express-force-ssl": "0.3.2",
     "express-session": "1.13.0",
     "geolib": "2.0.21",
     "googleapis": "5.2.1",
