--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "passport-local": "1.0.0",
     "react": "0.14.7",
     "request": "2.72.0",
+    "selectn": "1.0.20",
     "sequelize": "3.19.1",
     "serve-favicon": "2.3.0",
     "shortid": "2.2.6",
