added cleverbot to do response

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
     "braintree-web": "2.21.0",
+    "cleverbot.io": "1.0.4",
     "compression": "1.6.1",
     "config": "1.19.0",
     "convert-source-map": "1.1.3",
