--- a/producers/eastsidekings.json
+++ b/producers/eastsidekings.json
@@ -3,7 +3,7 @@
   "username": "eastsideking",
   "password": "porquibun",
   "description": "Asian American Fushion",
-  "profileImage": "http://s3-media3.fl.yelpcdn.com/bphoto/AY-PJ6Q1OL0AdUZzNaq6zQ/o.jpg",
+  "profileImage": "http://i.imgur.com/NtWwZI1.jpg",
   "address": "2538 Guadalupe St Austin, TX 78705",
   "percentageFee": 6,
   "transactionFee": 30,
