--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ npm-debug.log*
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+# Bower Components
+bower_components/
