--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-runtime": "6.9.2",
+    "bcryptjs": "2.3.0",
     "bluebird": "3.2.1",
     "body-parser": "1.15.0",
     "braintree": "1.36.0",
