--- a/package.json
+++ b/package.json
@@ -86,11 +86,12 @@
   },
   "homepage": "https://github.com/siddharthgutta/Entree.Server#readme",
   "devDependencies": {
+    "babel-cli": "6.10.1",
     "babel-core": "6.5.2",
     "babel-eslint": "4.1.8",
     "babel-loader": "6.2.0",
-    "babel-preset-node5": "10.6.0",
     "babel-preset-es2015": "6.1.18",
+    "babel-preset-node5": "10.6.0",
     "babel-preset-react": "6.5.0",
     "babel-register": "6.3.13",
     "babelify": "7.2.0",
@@ -114,8 +115,8 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.4.2",
     "gulp-util": "3.0.7",
-    "nodemon": "1.9.2",
     "mocha": "2.3.4",
+    "nodemon": "1.9.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.0"
