--- a/.babelrc
+++ b/.babelrc
@@ -20,14 +20,15 @@
         ]
       ]
     },
-    "server":{
+    "staging":{
       "presets":[
-        "node5",
+        "es2015",
+        "react",
         "stage-0"
       ],
       "plugins":[
         "array-includes",
-        "transform-runtime",
+        "syntax-async-functions",
         "transform-object-rest-spread",
         "syntax-class-properties",
         [
