--- a/.babelrc
+++ b/.babelrc
@@ -1,44 +1,21 @@
 {
-  "env":{
-    "development":{
-      "presets":[
-        "es2015",
-        "react",
-        "stage-0"
-      ],
-      "plugins":[
-        "array-includes",
-        "syntax-async-functions",
-        "transform-object-rest-spread",
-        "syntax-class-properties",
-        [
-          "transform-async-to-module-method",
-          {
-            "module":"bluebird",
-            "method":"coroutine"
-          }
-        ]
-      ]
-    },
-    "staging":{
-      "presets":[
-        "es2015",
-        "react",
-        "stage-0"
-      ],
-      "plugins":[
-        "array-includes",
-        "syntax-async-functions",
-        "transform-object-rest-spread",
-        "syntax-class-properties",
-        [
-          "transform-async-to-module-method",
-          {
-            "module":"bluebird",
-            "method":"coroutine"
-          }
-        ]
-      ]
-    }
-  }
+  "presets":[
+    "es2015",
+    "react",
+    "node5",
+    "stage-0"
+  ],
+  "plugins":[
+    "array-includes",
+    "transform-runtime",
+    "transform-object-rest-spread",
+    "syntax-class-properties",
+    [
+      "transform-async-to-module-method",
+      {
+        "module":"bluebird",
+        "method":"coroutine"
+      }
+    ]
+  ]
 }
