--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "passport-local": "1.0.0",
     "react": "0.14.2",
     "react-dom": "0.14.2",
-    "react-router": "^1.0.0",
+    "react-router": "1.0.0",
     "request": "2.72.0",
     "selectn": "1.0.20",
     "sequelize": "3.19.1",
