--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.compiled.js",
   "dependencies": {
     "@slack/client": "2.1.0",
-    "babel-core": "6.5.2",
+    "alt": "0.17.8",
     "babel-plugin-array-includes": "2.0.3",
     "babel-plugin-syntax-async-functions": "6.5.0",
     "babel-plugin-syntax-class-properties": "6.5.0",
@@ -17,9 +17,6 @@
     "babel-plugin-transform-object-rest-spread": "6.5.0",
     "babel-plugin-transform-runtime": "6.5.0",
     "babel-polyfill": "6.5.0",
-    "babel-preset-es2015": "6.5.0",
-    "babel-preset-node5": "10.6.0",
-    "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-runtime": "6.9.2",
     "bluebird": "3.2.1",
@@ -41,6 +38,7 @@
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.7.0",
     "grunt-contrib-watch": "0.6.1",
+    "history": "1.13.0",
     "jade": "1.11.0",
     "kerberos": "0.0.18",
     "keymirror": "0.1.1",
@@ -49,11 +47,14 @@
     "moment": "2.12.0",
     "mongodb": "2.1.4",
     "mongoose": "4.3.7",
+    "morgan": "1.6.1",
     "mysql": "2.10.0",
     "npm": "3.7.2",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
-    "react": "0.14.7",
+    "react": "0.14.2",
+    "react-dom": "0.14.2",
+    "react-router": "1.0.0",
     "request": "2.72.0",
     "selectn": "1.0.20",
     "sequelize": "3.19.1",
@@ -61,6 +62,7 @@
     "shortid": "2.2.6",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
+    "underscore": "1.8.3",
     "urijs": "1.17.1"
   },
   "scripts": {
@@ -70,7 +72,8 @@
     "local": "NODE_ENV=development node index.compiled.js",
     "staging": "NODE_ENV=staging node index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
-    "compile": "grunt compile"
+    "compile": "grunt compile",
+    "watch": "NODE_ENV=development nodemon index.compiled.js"
   },
   "repository": {
     "type": "git",
@@ -83,7 +86,17 @@
   },
   "homepage": "https://github.com/siddharthgutta/Entree.Server#readme",
   "devDependencies": {
+    "babel-cli": "6.10.1",
+    "babel-core": "6.5.2",
     "babel-eslint": "4.1.8",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-node5": "10.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-register": "6.3.13",
+    "babelify": "7.2.0",
+    "bower": "1.6.5",
+    "browserify": "12.0.1",
     "cordova": "6.0.0",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "4.0.0",
@@ -92,6 +105,20 @@
     "eslint-plugin-mocha": "1.1.0",
     "eslint-plugin-react": "3.16.1",
     "grunt-cli": "0.1.13",
-    "mocha": "2.3.4"
+    "gulp": "3.9.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-concat": "2.6.0",
+    "gulp-cssmin": "0.1.7",
+    "gulp-if": "2.0.0",
+    "gulp-less": "3.0.3",
+    "gulp-plumber": "1.0.1",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.4.2",
+    "gulp-util": "3.0.7",
+    "mocha": "2.3.4",
+    "nodemon": "1.9.2",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.6.0"
   }
 }
