--- a/package.json
+++ b/package.json
@@ -107,8 +107,8 @@
     "grunt-cli": "0.1.13",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-concat": "2.6.0",
     "gulp-cssmin": "0.1.7",
-    "gulp-concat-sourcemap": "1.3.1",
     "gulp-if": "2.0.0",
     "gulp-less": "3.0.3",
     "gulp-plumber": "1.0.1",
