--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "urijs": "1.17.1"
   },
   "scripts": {
-    "test": "set -e; export NODE_ENV=test; mocha --timeout 15000 -R dot",
-    "tests": "set -e; export NODE_ENV=test; for f in $(find ./test -name '*-test.compiled.js'); do npm run test $f; done",
+    "test": "set -e; export NODE_ENV=test; export APP_TYPE=entree; mocha --timeout 15000 -R dot",
+    "tests": "set -e; for f in $(find ./test -name '*-test.compiled.js'); do npm run test $f; done",
     "start": "node index.compiled.js",
-    "local": "NODE_ENV=development node index.compiled.js",
-    "staging": "NODE_ENV=staging node index.compiled.js",
+    "local": "NODE_ENV=development APP_TYPE=entree node index.compiled.js",
+    "staging": "NODE_ENV=staging APP_TYPE=entree node index.compiled.js",
     "lint": "eslint --ext js,.es6,.jsx ./",
     "compile": "grunt compile",
     "watch": "NODE_ENV=development nodemon index.compiled.js"
