--- a/producers/eastsidekings.json
+++ b/producers/eastsidekings.json
@@ -8,10 +8,10 @@
   "percentageFee": 6,
   "transactionFee": 30,
   "exampleOrder": "1 chicken karaage with 1 order of beet fries",
-  "menuLink": "http://i.imgur.com/9rQp0nc.jpg",
   "optional": {
     "producer": {
-      "enabled": true
+      "enabled": true,
+      "menuLink": "http://i.imgur.com/9rQp0nc.jpg",
     }
   },
   "hours":
