--- a/producers/greasyweinerla.json
+++ b/producers/greasyweinerla.json
@@ -11,7 +11,7 @@
   "optional": {
     "producer": {
       "enabled": true,
-      "menuLink": "http://thegreasywiener.com/menu/",
+      "menuLink": "http://thegreasywiener.com/menu/"
     }
   },
   "hours":
@@ -20,34 +20,34 @@
     "openTime": "11:30",
     "closeTime": "13:30"
   },
-    {
-      "day": "Tuesday",
-      "openTime": "11:30",
-      "closeTime": "13:30"
-    },
-    {
-      "day": "Wednesday",
-      "openTime": "11:30",
-      "closeTime": "13:30"
-    },
-    {
-      "day": "Thursday",
-      "openTime": "11:30",
-      "closeTime": "13:30"
-    },
-    {
-      "day": "Friday",
-      "openTime": "11:30",
-      "closeTime": "13:30"
-    },
-    {
-      "day": "Saturday",
-      "openTime": "11:30",
-      "closeTime": "13:30"
-    },
-    {
-      "day": "Sunday",
-      "openTime": "11:30",
-      "closeTime": "13:30"
-    }]
+  {
+    "day": "Tuesday",
+    "openTime": "11:30",
+    "closeTime": "13:30"
+  },
+  {
+    "day": "Wednesday",
+    "openTime": "11:30",
+    "closeTime": "13:30"
+  },
+  {
+    "day": "Thursday",
+    "openTime": "11:30",
+    "closeTime": "13:30"
+  },
+  {
+    "day": "Friday",
+    "openTime": "11:30",
+    "closeTime": "13:30"
+  },
+  {
+    "day": "Saturday",
+    "openTime": "11:30",
+    "closeTime": "13:30"
+  },
+  {
+    "day": "Sunday",
+    "openTime": "11:30",
+    "closeTime": "13:30"
+  }]
 }
